[project]
name = "inferna"
version = "0.1.1"
description = "inferna is a thin nanobind wrapper around the llama, whisper, and stable-diffusion .cpp ecosystem."
readme = "README.md"
authors = [
    { name = "Shakeeb Alireza", email = "shakfu@users.noreply.github.com" }
]
license = "MIT"
requires-python = ">=3.10"
keywords = ["llama", "llm", "inference", "nanobind", "llama.cpp", "whisper.cpp", "stable-diffusion.cpp", "gguf", "ai", "machine-learning"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/shakfu/inferna"
Repository = "https://github.com/shakfu/inferna"
Issues = "https://github.com/shakfu/inferna/issues"

[project.scripts]
inferna = "inferna.__main__:main"

[build-system]
requires = ["scikit-build-core", "nanobind>=2.12.0"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.version = ">=3.26"
cmake.build-type = "Release"
install.strip = true
wheel.packages = ["src/inferna"]
# Belt-and-suspenders: CMake's install rules already constrain what enters
# the wheel, but stripping source/static-archive patterns here protects
# against accidentally-installed companions. NOTE: `*.lib` is intentionally
# absent — on Windows, delvewheel relocates DLLs into `inferna.libs/` and
# can copy companion `.lib` import libraries that we want to keep.
wheel.exclude = ["*.cpp", "*.c", "*.h", "*.hpp", "*.a"]
wheel.license-files = ["LICENSE"]
build-dir = "build/{wheel_tag}"
sdist.include = [
    "thirdparty/llama.cpp/include",
    "thirdparty/llama.cpp/dynamic",
    "thirdparty/stable-diffusion.cpp/include",
    "thirdparty/whisper.cpp/include",
    "thirdparty/sqlite-vector",
]
# thirdparty/*/lib/ holds prebuilt static libs + cmake/pkgconfig export files
# regenerated by the before-build hook. Excluded from sdist so source builds
# on other platforms aren't seeded with macOS-arm64 binaries.
sdist.exclude = [
    "bin/",
    "build/",
    "dist/",
    ".git/",
    "*.egg-info/",
    "thirdparty/*/lib/",
]


[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = ["src/inferna/_vendor"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E501",  # Allow long lines (handled by formatter)
    "E712",  # Allow == True/False comparisons (common in Cython property tests)
    "E731",  # Allow lambda assignments
    "E741",  # Allow ambiguous variable names (l, O, I)
    "F841",  # Allow unused local variables (common in tests for side effects)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]  # Re-exports, native dep setup before imports
"src/inferna/agents/*" = ["E402", "F811", "F821"]  # Conditional imports, forward refs, factory methods
"src/inferna/api.py" = ["E402"]  # Import after path setup
"src/inferna/batching.py" = ["E402"]  # Import after path setup
"src/inferna/llama/mtmd/*" = ["F401"]  # Conditional numpy import
"tests/*" = ["E402", "E722", "F401", "F811", "F821"]  # Test-specific relaxations

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
# Vendored libraries (jinja2, markupsafe) are not project code.
exclude = ["src/inferna/_vendor/"]
# check_untyped_defs = false

# Third-party libraries without bundled type stubs. We don't take a hard
# dependency on these (most are optional integrations), so we tell mypy
# to treat their imports as untyped rather than requiring stubs to be
# installed in the dev environment.
[[tool.mypy.overrides]]
module = ["requests", "langchain.*", "langchain_core.*"]
ignore_missing_imports = true
follow_imports = "skip"

# These modules subclass inferna.api.LLM, which under strict +
# follow_imports=skip degrades to Any. The subclass relationship is
# real, not a workaround — relax the strict subclass check rather than
# dropping skip globally (which slows the whole typecheck pass).
[[tool.mypy.overrides]]
module = ["inferna.agents.constrained", "inferna.integrations.langchain"]
disallow_subclassing_any = false

[tool.pytest.ini_options]
# "tests" is on pythonpath so that test modules can do
# `from conftest import DEFAULT_MODEL` without relying on pytest's
# rootdir-hack sys.path ordering, which breaks on full-directory collection.
pythonpath = ["src", "tests"]
testpaths = ["tests"]
# tests/examples/ holds demo scripts, not pytest tests. Exclude by
# directory name so pytest never descends into it (also prevents a
# nested conftest.py collision with tests/conftest.py).
norecursedirs = ["examples"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks test as an integration test (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-memray>=1.8.0 ; sys_platform != 'win32'",
    "pytest-mock>=3.14.1",
    "auditwheel>=6.1.0 ; sys_platform == 'linux'",
    "delocate>=0.12.0 ; sys_platform == 'darwin'",
    "delvewheel>=1.10.0 ; sys_platform == 'win32'",
    "ruff>=0.12.12",
    "mypy>=1.13.0",
    "numpy>=1.24.4",
    "requests>=2.32.4",
    "langchain>=0.0.27",
    "twine>=6.1.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.0",
    "nanobind>=2.12.0",
]
pdf = [
    "docling>=2.31.0",
]
qdrant = [
    "qdrant-client>=1.9.0",
]

# -----------------------------------------------------------------------------
# cibuildwheel configuration for cross-platform wheel building
#
# Source-of-truth policy (C2):
# This section is canonical for cross-backend defaults — Python matrix,
# skip list, manylinux image, repair-wheel commands, build verbosity,
# baseline environment vars (GGML_NATIVE=0 etc.), and dependency build
# (`before-all`). Workflows MUST NOT duplicate values defined here unless
# they are intentionally overriding for a specific reason (e.g. GPU
# backends override `manylinux-x86_64-image` for CUDA/ROCm/SYCL because
# their toolchains require manylinux_2_28 and beyond).
#
# Two cibuildwheel semantics matter when reading this file:
#   1. CIBW_<KEY>_<PLAT> env vars *replace* the pyproject `environment`
#      table for that platform (no merge). Workflows that need to add
#      build-specific env vars should prefer CIBW_ENVIRONMENT_PASS_<PLAT>
#      when the runner already has the var set, so pyproject defaults are
#      preserved.
#   2. `before-all` runs once per JOB. `before-build` runs once per
#      *Python version*. Anything that builds third-party deps belongs in
#      `before-all` to avoid rebuilding them 5x for cp310-cp314.
# -----------------------------------------------------------------------------

[tool.cibuildwheel]
# Default Python matrix. Variants (e.g. abi3 cp312-only) override via
# CIBW_BUILD on the dispatching workflow.
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = "*-musllinux_* *-win32 *-manylinux_i686"
build-verbosity = 1

# Per-Python `before-build` is intentionally empty — every platform has
# its own `before-all` (see the per-platform sections below) that builds
# third-party deps once for the whole job. A non-empty global
# `before-build` would re-trigger the deps build on every Python build.
before-build = ""

# Test wheels with the project's pytest suite. GPU workflows override
# this to "" because their hosted runners lack the GPU hardware required
# to exercise the backend.
test-groups = ["dev"]
test-command = "pytest {project}/tests -x -q --ignore={project}/tests/examples -o pythonpath="

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"

# Build thirdparty deps once at job start (NOT per-Python).
# cp310 hard-coding: manylinux2014's bundled system Python is 3.6, too
# old for manage.py. Revisit when this image is bumped to manylinux_2_28
# (which ships modern Python).
before-all = "yum install -y git ccache && /opt/python/cp310-cp310/bin/pip install cmake ninja && PATH=/opt/python/cp310-cp310/bin:$PATH /opt/python/cp310-cp310/bin/python scripts/manage.py build --all --deps-only --no-sd-examples && test -d thirdparty/llama.cpp/lib && ls thirdparty/llama.cpp/lib/*llama* >/dev/null 2>&1 || { echo 'ERROR: manage.py produced no libraries'; exit 1; }"

# Baseline build env. Workflows that need additional vars (ccache paths,
# launcher overrides, etc.) should set runner-level env and forward via
# CIBW_ENVIRONMENT_PASS_LINUX rather than overriding this table — that
# preserves these defaults.
environment = { GGML_METAL = "0", GGML_NATIVE = "0" }

repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
# Build thirdparty deps once at job start (NOT per-Python).
before-all = "python scripts/manage.py build --all --deps-only --no-sd-examples && test -d thirdparty/llama.cpp/lib && ls thirdparty/llama.cpp/lib/*llama* >/dev/null 2>&1 || { echo 'ERROR: manage.py produced no libraries'; exit 1; }"

environment = { MACOSX_DEPLOYMENT_TARGET = "11.0", GGML_METAL = "1", GGML_NATIVE = "0" }

repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel} --exclude libssl --exclude libcrypto"

[tool.cibuildwheel.windows]
# Build thirdparty deps once at job start (NOT per-Python). The
# `pip install delvewheel` step here is a no-op when delvewheel is
# already installed, so it's cheap to keep idempotent.
before-all = "pip install delvewheel && python scripts/manage.py build --all --deps-only --no-sd-examples && python -c \"from pathlib import Path; libs=list(Path('thirdparty/llama.cpp/lib').glob('*llama*')); assert libs, 'manage.py produced no libraries'\""

environment = { GGML_METAL = "0", GGML_NATIVE = "0" }

repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"
